--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP3A0TsYRYKl0wDYFrONczP",
+      "authorship_tag": "ABX9TyO8x1JNp4P8wKcJ5ir/nZts",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/henryjhu/Anomaly-Detection-in-Wire-Activities/blob/main/DSC_680_Machine_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/henryjhu/Anomaly-Detection-in-Wire-Activities/blob/main/DSC_680_Unsupervised_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -57,7 +57,7 @@
       },
       "source": [
         "<b>Purpose:</b><br>\n",
-        "Carry out both unsupervised and supervised machine learnings with the sample data.<br>\n",
+        "Carry out unsupervised machine learnings with the sample data.<br>\n",
         "<b>Universtiy Name:</b> Utica College <br>\n",
         "<b>Course Name:</b> DSC-680-Z1 Research Practicum <br>\n",
         "<b>Student Name:</b> Henry J. Hu <br>\n",
@@ -91,7 +91,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive/', force_remount=True)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "from datetime import datetime\n",
         "import pytz"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         "input_data = pd.read_csv(\"gdrive/MyDrive/sample_df_4M.txt\")\n",
         "input_data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +317,7 @@
         "NN_103_df.head()\n",
         "NN_103_df.shape\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
         "NN_202_df.head()\n",
         "NN_202_df.shape"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
         "EU_103_df.head()\n",
         "EU_103_df.shape"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -407,7 +407,7 @@
         "EU_202_df.head()\n",
         "EU_202_df.shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +437,7 @@
         "AS_103_df.head()\n",
         "AS_103_df.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
         "AS_202_df.head()\n",
         "AS_202_df.shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,10 +581,10 @@
         "\n",
         "  log.info (f'Minimum Score = {score_min}, Maximum Score = {score_max}')\n",
         "\n",
-        "  # Labeling all scores <-0.5 as fraud and >=-0.5 as non-fraud\n",
-        "  pred_y[pred_y < -50] = -99\n",
-        "  pred_y[pred_y >= -50] = 0.0\n",
-        "  pred_y[pred_y == -99] = 1.0\n",
+        "  # Labeling all scores <-100 as fraud and >=-100 as non-fraud\n",
+        "  pred_y[pred_y < -100] = -999\n",
+        "  pred_y[pred_y >= -100] = 0.0\n",
+        "  pred_y[pred_y == -999] = 1.0\n",
         "\n",
         "  fraud_ct = np.count_nonzero(pred_y == 1.0)\n",
         "  fraud_pct = fraud_ct/n_rows_in\n",
@@ -604,7 +604,7 @@
         "\n",
         "  return df_f"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,28 +612,27 @@
       "metadata": {
         "id": "cxQ88y_MCLU1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 746
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7bc331e2-2511-4864-805a-62e698e04333"
+        "outputId": "221f3446-d9c2-4ec3-b0ed-122e085ac2fa"
       },
       "source": [
         "NN_103_score_df = ensemble_fun (NN_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
         "NN_103_score_df"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-03 21:02:58-04:00 : Input data frame size: Rows = 598565, Columns = 2\n",
-            "2021-08-03 21:03:04-04:00 : Fitting LOF\n",
-            "2021-08-03 21:03:04-04:00 : LOF is fitted successfully with 598565 scores\n",
-            "2021-08-03 21:04:02-04:00 : Fitting iForest\n",
-            "2021-08-03 21:04:37-04:00 : iForest is fitted successfully with 598565 scores\n",
-            "2021-08-03 21:04:37-04:00 : Minimum Score = -1179416323015353.2, Maximum Score = -0.31342931054949\n",
-            "2021-08-03 21:04:37-04:00 : Percentage of suspicious transactions: 0.018240291363511064\n",
-            "2021-08-03 21:04:38-04:00 : Output data frame size: Rows = 598565, Columns = 12\n"
+            "2021-08-03 23:02:24-04:00 : Input data frame size: Rows = 598565, Columns = 2\n",
+            "2021-08-03 23:02:30-04:00 : Fitting LOF\n",
+            "2021-08-03 23:02:30-04:00 : LOF is fitted successfully with 598565 scores\n",
+            "2021-08-03 23:03:32-04:00 : Fitting iForest\n",
+            "2021-08-03 23:04:09-04:00 : iForest is fitted successfully with 598565 scores\n",
+            "2021-08-03 23:04:09-04:00 : Minimum Score = -1179416323015353.2, Maximum Score = -0.31342931054949\n",
+            "2021-08-03 23:04:09-04:00 : Percentage of suspicious transactions: 0.015999933173506637\n",
+            "2021-08-03 23:04:09-04:00 : Output data frame size: Rows = 598565, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -864,7 +863,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 18
         }
       ]
     },
@@ -873,28 +872,27 @@
       "metadata": {
         "id": "zWxsTUDyRdZo",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 746
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6309a261-c1e0-42e5-ffb5-9432910cf532"
+        "outputId": "15b67c8d-0229-42cc-b3c5-d4e8f0b3ee0d"
       },
       "source": [
         "NN_202_score_df = ensemble_fun (NN_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
         "NN_202_score_df"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-03 21:04:38-04:00 : Input data frame size: Rows = 1310612, Columns = 2\n",
-            "2021-08-03 21:04:56-04:00 : Fitting LOF\n",
-            "2021-08-03 21:04:56-04:00 : LOF is fitted successfully with 1310612 scores\n",
-            "2021-08-03 21:07:18-04:00 : Fitting iForest\n",
-            "2021-08-03 21:08:38-04:00 : iForest is fitted successfully with 1310612 scores\n",
-            "2021-08-03 21:08:38-04:00 : Minimum Score = -1.0615615140200314e+17, Maximum Score = -0.3356216108231506\n",
-            "2021-08-03 21:08:38-04:00 : Percentage of suspicious transactions: 0.0159635345929993\n",
-            "2021-08-03 21:08:39-04:00 : Output data frame size: Rows = 1310612, Columns = 12\n"
+            "2021-08-03 23:04:09-04:00 : Input data frame size: Rows = 1310612, Columns = 2\n",
+            "2021-08-03 23:04:30-04:00 : Fitting LOF\n",
+            "2021-08-03 23:04:30-04:00 : LOF is fitted successfully with 1310612 scores\n",
+            "2021-08-03 23:06:52-04:00 : Fitting iForest\n",
+            "2021-08-03 23:08:12-04:00 : iForest is fitted successfully with 1310612 scores\n",
+            "2021-08-03 23:08:12-04:00 : Minimum Score = -1.0615615140200314e+17, Maximum Score = -0.3356216108231506\n",
+            "2021-08-03 23:08:12-04:00 : Percentage of suspicious transactions: 0.015302774581645827\n",
+            "2021-08-03 23:08:13-04:00 : Output data frame size: Rows = 1310612, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1125,7 +1123,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 19
         }
       ]
     },
@@ -1134,28 +1132,27 @@
       "metadata": {
         "id": "p3b-pASFGEPf",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 914
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c37511e-7bfb-47c6-c109-a7efcef5ee28"
+        "outputId": "9a744d44-11b3-4827-9043-e4ca37564050"
       },
       "source": [
         "EU_103_score_df = ensemble_fun (EU_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
         "EU_103_score_df"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-03 21:08:39-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
-            "2021-08-03 21:08:48-04:00 : Fitting LOF\n",
-            "2021-08-03 21:08:48-04:00 : LOF is fitted successfully with 629564 scores\n",
-            "2021-08-03 21:09:52-04:00 : Fitting iForest\n",
-            "2021-08-03 21:10:29-04:00 : iForest is fitted successfully with 629564 scores\n",
-            "2021-08-03 21:10:30-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
-            "2021-08-03 21:10:30-04:00 : Percentage of suspicious transactions: 0.019445203347078294\n",
-            "2021-08-03 21:10:30-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
+            "2021-08-03 23:08:14-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
+            "2021-08-03 23:08:22-04:00 : Fitting LOF\n",
+            "2021-08-03 23:08:22-04:00 : LOF is fitted successfully with 629564 scores\n",
+            "2021-08-03 23:09:27-04:00 : Fitting iForest\n",
+            "2021-08-03 23:10:06-04:00 : iForest is fitted successfully with 629564 scores\n",
+            "2021-08-03 23:10:06-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
+            "2021-08-03 23:10:06-04:00 : Percentage of suspicious transactions: 0.018176071058700942\n",
+            "2021-08-03 23:10:06-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1386,7 +1383,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 20
         }
       ]
     },
@@ -1395,28 +1392,27 @@
       "metadata": {
         "id": "J0vtXdmFSRG-",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 880
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdf2f614-ae07-4ff8-e353-c66de25d13b1"
+        "outputId": "8717708f-9262-4d8d-d377-c068054b7eb9"
       },
       "source": [
         "EU_202_score_df = ensemble_fun (EU_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
         "EU_202_score_df"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-03 21:10:30-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
-            "2021-08-03 21:10:33-04:00 : Fitting LOF\n",
-            "2021-08-03 21:10:33-04:00 : LOF is fitted successfully with 319776 scores\n",
-            "2021-08-03 21:11:01-04:00 : Fitting iForest\n",
-            "2021-08-03 21:11:18-04:00 : iForest is fitted successfully with 319776 scores\n",
-            "2021-08-03 21:11:18-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
-            "2021-08-03 21:11:18-04:00 : Percentage of suspicious transactions: 0.01647403182227559\n",
-            "2021-08-03 21:11:18-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
+            "2021-08-03 23:10:07-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
+            "2021-08-03 23:10:09-04:00 : Fitting LOF\n",
+            "2021-08-03 23:10:09-04:00 : LOF is fitted successfully with 319776 scores\n",
+            "2021-08-03 23:10:38-04:00 : Fitting iForest\n",
+            "2021-08-03 23:10:54-04:00 : iForest is fitted successfully with 319776 scores\n",
+            "2021-08-03 23:10:54-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
+            "2021-08-03 23:10:54-04:00 : Percentage of suspicious transactions: 0.016045606924847394\n",
+            "2021-08-03 23:10:55-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1647,7 +1643,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 21
         }
       ]
     },
@@ -1656,28 +1652,27 @@
       "metadata": {
         "id": "hxHsYUK2S_Ba",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 914
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9af51c8a-0928-4b74-cb93-c43b925bef9e"
+        "outputId": "05b00bbe-4bcf-4002-cc41-3da518788ee9"
       },
       "source": [
         "AS_103_score_df = ensemble_fun (AS_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
         "AS_103_score_df"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-03 21:11:19-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
-            "2021-08-03 21:11:27-04:00 : Fitting LOF\n",
-            "2021-08-03 21:11:27-04:00 : LOF is fitted successfully with 629564 scores\n",
-            "2021-08-03 21:12:32-04:00 : Fitting iForest\n",
-            "2021-08-03 21:13:10-04:00 : iForest is fitted successfully with 629564 scores\n",
-            "2021-08-03 21:13:10-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
-            "2021-08-03 21:13:10-04:00 : Percentage of suspicious transactions: 0.019445203347078294\n",
-            "2021-08-03 21:13:11-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
+            "2021-08-03 23:10:55-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
+            "2021-08-03 23:11:03-04:00 : Fitting LOF\n",
+            "2021-08-03 23:11:03-04:00 : LOF is fitted successfully with 629564 scores\n",
+            "2021-08-03 23:12:09-04:00 : Fitting iForest\n",
+            "2021-08-03 23:12:47-04:00 : iForest is fitted successfully with 629564 scores\n",
+            "2021-08-03 23:12:47-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
+            "2021-08-03 23:12:47-04:00 : Percentage of suspicious transactions: 0.018176071058700942\n",
+            "2021-08-03 23:12:47-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1908,7 +1903,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 22
         }
       ]
     },
@@ -1917,28 +1912,27 @@
       "metadata": {
         "id": "IfA1GNsOTL3i",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 880
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b56e224c-328a-44f6-9cdd-1f49367a0874"
+        "outputId": "7abf6949-5d18-417f-8e87-b76118094927"
       },
       "source": [
         "AS_202_score_df = ensemble_fun (AS_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
         "AS_202_score_df"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-08-03 21:13:11-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
-            "2021-08-03 21:13:13-04:00 : Fitting LOF\n",
-            "2021-08-03 21:13:13-04:00 : LOF is fitted successfully with 319776 scores\n",
-            "2021-08-03 21:13:42-04:00 : Fitting iForest\n",
-            "2021-08-03 21:13:59-04:00 : iForest is fitted successfully with 319776 scores\n",
-            "2021-08-03 21:13:59-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
-            "2021-08-03 21:13:59-04:00 : Percentage of suspicious transactions: 0.01647403182227559\n",
-            "2021-08-03 21:13:59-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
+            "2021-08-03 23:12:48-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
+            "2021-08-03 23:12:50-04:00 : Fitting LOF\n",
+            "2021-08-03 23:12:50-04:00 : LOF is fitted successfully with 319776 scores\n",
+            "2021-08-03 23:13:18-04:00 : Fitting iForest\n",
+            "2021-08-03 23:13:35-04:00 : iForest is fitted successfully with 319776 scores\n",
+            "2021-08-03 23:13:35-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
+            "2021-08-03 23:13:35-04:00 : Percentage of suspicious transactions: 0.016045606924847394\n",
+            "2021-08-03 23:13:36-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -2169,7 +2163,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 23
         }
       ]
     },
@@ -2181,7 +2175,7 @@
       "source": [
         ""
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
