--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP0OWogbytU7thdtCFnnF7g",
+      "authorship_tag": "ABX9TyNKKkCzyBw39kQ1BkX/iIMc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -520,7 +520,7 @@
         "  # Include only the relavent independent varialbes\n",
         "  X=df[['TRXN_MONTH','TRANSACTION_AMOUNT']]\n",
         "  \n",
-        "  # Center the data around the mean of 0\n",
+        "  # Scaled and center the data around the mean of 0\n",
         "  from sklearn.preprocessing import StandardScaler\n",
         "  scaling=StandardScaler()\n",
         "  scaling.fit_transform(X)\n",
