--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNKKkCzyBw39kQ1BkX/iIMc",
+      "authorship_tag": "ABX9TyMypRjVenaSWZPSa7A4swQc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b14a23e-8228-4788-903d-3092e6e87e5d"
+        "outputId": "f233d3eb-9a3f-4601-ae49-3d7942ded7a8"
       },
       "source": [
         "from google.colab import drive\n",
@@ -157,7 +157,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 341
         },
-        "outputId": "4ed60139-03da-4ebc-a3f5-430b2f6f8cbf"
+        "outputId": "950aab26-d969-4f28-ec1a-743b222a928d"
       },
       "source": [
         "# Importing data and looking at head\n",
@@ -310,7 +310,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "219d9889-a074-4f3d-a308-ce51c7139640"
+        "outputId": "bb72eabf-6b32-4f31-c0e4-1fe4dbc2988e"
       },
       "source": [
         "NN_103_df = input_data[(input_data['CONTINENT_CODE']=='NN') & (input_data['SWIFT_MSG_TYPE']==103)]\n",
@@ -340,7 +340,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eb765c6c-69b7-4549-b148-dd69031284c3"
+        "outputId": "02ebb516-d4fc-4c21-b471-05ff73f46ba5"
       },
       "source": [
         "NN_202_df = input_data[(input_data['CONTINENT_CODE']=='NN') & (input_data['SWIFT_MSG_TYPE']==202)]\n",
@@ -370,7 +370,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b334ab1-2d3d-4c65-ea7e-f247a00116f5"
+        "outputId": "cc67af17-a815-4f94-f029-2962b11b8ae9"
       },
       "source": [
         "EU_103_df = input_data[(input_data['CONTINENT_CODE']=='EU') & (input_data['SWIFT_MSG_TYPE']==103)]\n",
@@ -400,7 +400,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5cb1a1dc-3cd7-4b95-bff9-581d2719937d"
+        "outputId": "be9b6f33-3258-4d5b-c53a-112c2e50349a"
       },
       "source": [
         "EU_202_df = input_data[(input_data['CONTINENT_CODE']=='EU') & (input_data['SWIFT_MSG_TYPE']==202)]\n",
@@ -430,7 +430,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "179e594c-32b1-4326-b9d5-62a4371b9056"
+        "outputId": "c67573de-309b-4e91-b03e-bc3c8bd8fbda"
       },
       "source": [
         "AS_103_df = input_data[(input_data['CONTINENT_CODE']=='EU') & (input_data['SWIFT_MSG_TYPE']==103)]\n",
@@ -460,7 +460,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a61f323-7b33-4f19-a3d0-a63000849c14"
+        "outputId": "c7eb1f88-8be0-4384-8cc6-e767e6282587"
       },
       "source": [
         "AS_202_df = input_data[(input_data['CONTINENT_CODE']=='EU') & (input_data['SWIFT_MSG_TYPE']==202)]\n",
@@ -615,7 +615,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 746
         },
-        "outputId": "4d9a4860-bea8-494d-92be-ef9d66c1f3b2"
+        "outputId": "50e69f57-755f-406c-b598-b9f53f3a0ad6"
       },
       "source": [
         "NN_103_score_df = ensemble_fun (NN_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
@@ -626,14 +626,14 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-08-04 13:28:16-04:00 : Input data frame size: Rows = 598565, Columns = 2\n",
-            "2021-08-04 13:28:20-04:00 : Fitting LOF\n",
-            "2021-08-04 13:28:20-04:00 : LOF is fitted successfully with 598565 scores\n",
-            "2021-08-04 13:29:12-04:00 : Fitting iForest\n",
-            "2021-08-04 13:29:41-04:00 : iForest is fitted successfully with 598565 scores\n",
-            "2021-08-04 13:29:41-04:00 : Minimum Score = -1179416323015353.2, Maximum Score = -0.31342931054949\n",
-            "2021-08-04 13:29:41-04:00 : Percentage of suspicious transactions: 0.013507304971055775\n",
-            "2021-08-04 13:29:41-04:00 : Output data frame size: Rows = 598565, Columns = 12\n"
+            "2021-08-04 14:28:36-04:00 : Input data frame size: Rows = 598565, Columns = 2\n",
+            "2021-08-04 14:28:41-04:00 : Fitting LOF\n",
+            "2021-08-04 14:28:41-04:00 : LOF is fitted successfully with 598565 scores\n",
+            "2021-08-04 14:29:33-04:00 : Fitting iForest\n",
+            "2021-08-04 14:30:01-04:00 : iForest is fitted successfully with 598565 scores\n",
+            "2021-08-04 14:30:01-04:00 : Minimum Score = -1179416323015353.2, Maximum Score = -0.31342931054949\n",
+            "2021-08-04 14:30:01-04:00 : Percentage of suspicious transactions: 0.013507304971055775\n",
+            "2021-08-04 14:30:02-04:00 : Output data frame size: Rows = 598565, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -876,7 +876,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 746
         },
-        "outputId": "e901975e-3198-4e6c-b31b-fe5cc3a3cb6a"
+        "outputId": "07a520f4-b7e0-481d-e8cc-b08d2e3c0838"
       },
       "source": [
         "NN_202_score_df = ensemble_fun (NN_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
@@ -887,14 +887,14 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-08-04 13:29:41-04:00 : Input data frame size: Rows = 1310612, Columns = 2\n",
-            "2021-08-04 13:29:57-04:00 : Fitting LOF\n",
-            "2021-08-04 13:29:57-04:00 : LOF is fitted successfully with 1310612 scores\n",
-            "2021-08-04 13:32:00-04:00 : Fitting iForest\n",
-            "2021-08-04 13:33:04-04:00 : iForest is fitted successfully with 1310612 scores\n",
-            "2021-08-04 13:33:05-04:00 : Minimum Score = -1.0615615140200314e+17, Maximum Score = -0.3356216108231506\n",
-            "2021-08-04 13:33:05-04:00 : Percentage of suspicious transactions: 0.014173531144228804\n",
-            "2021-08-04 13:33:05-04:00 : Output data frame size: Rows = 1310612, Columns = 12\n"
+            "2021-08-04 14:30:02-04:00 : Input data frame size: Rows = 1310612, Columns = 2\n",
+            "2021-08-04 14:30:17-04:00 : Fitting LOF\n",
+            "2021-08-04 14:30:17-04:00 : LOF is fitted successfully with 1310612 scores\n",
+            "2021-08-04 14:32:19-04:00 : Fitting iForest\n",
+            "2021-08-04 14:33:23-04:00 : iForest is fitted successfully with 1310612 scores\n",
+            "2021-08-04 14:33:24-04:00 : Minimum Score = -1.0615615140200314e+17, Maximum Score = -0.3356216108231506\n",
+            "2021-08-04 14:33:24-04:00 : Percentage of suspicious transactions: 0.014173531144228804\n",
+            "2021-08-04 14:33:24-04:00 : Output data frame size: Rows = 1310612, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1137,7 +1137,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 914
         },
-        "outputId": "2569fa04-4d69-46d8-c364-05858a7c1a56"
+        "outputId": "ccd85dc1-2704-4f62-cbbe-a8e5965a23f9"
       },
       "source": [
         "EU_103_score_df = ensemble_fun (EU_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
@@ -1148,14 +1148,14 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-08-04 13:33:05-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
-            "2021-08-04 13:33:12-04:00 : Fitting LOF\n",
-            "2021-08-04 13:33:12-04:00 : LOF is fitted successfully with 629564 scores\n",
-            "2021-08-04 13:34:08-04:00 : Fitting iForest\n",
-            "2021-08-04 13:34:39-04:00 : iForest is fitted successfully with 629564 scores\n",
-            "2021-08-04 13:34:39-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
-            "2021-08-04 13:34:39-04:00 : Percentage of suspicious transactions: 0.016441537317889842\n",
-            "2021-08-04 13:34:39-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
+            "2021-08-04 14:33:25-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
+            "2021-08-04 14:33:31-04:00 : Fitting LOF\n",
+            "2021-08-04 14:33:31-04:00 : LOF is fitted successfully with 629564 scores\n",
+            "2021-08-04 14:34:27-04:00 : Fitting iForest\n",
+            "2021-08-04 14:34:59-04:00 : iForest is fitted successfully with 629564 scores\n",
+            "2021-08-04 14:34:59-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
+            "2021-08-04 14:34:59-04:00 : Percentage of suspicious transactions: 0.016441537317889842\n",
+            "2021-08-04 14:35:00-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1398,7 +1398,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 880
         },
-        "outputId": "f43b9444-e1ed-4042-d0ad-c94d050100de"
+        "outputId": "403dddee-8d1f-46de-f3e7-9adc44aff5c2"
       },
       "source": [
         "EU_202_score_df = ensemble_fun (EU_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
@@ -1409,14 +1409,14 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-08-04 13:34:39-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
-            "2021-08-04 13:34:42-04:00 : Fitting LOF\n",
-            "2021-08-04 13:34:42-04:00 : LOF is fitted successfully with 319776 scores\n",
-            "2021-08-04 13:35:07-04:00 : Fitting iForest\n",
-            "2021-08-04 13:35:22-04:00 : iForest is fitted successfully with 319776 scores\n",
-            "2021-08-04 13:35:22-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
-            "2021-08-04 13:35:22-04:00 : Percentage of suspicious transactions: 0.015154358050635445\n",
-            "2021-08-04 13:35:22-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
+            "2021-08-04 14:35:00-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
+            "2021-08-04 14:35:02-04:00 : Fitting LOF\n",
+            "2021-08-04 14:35:02-04:00 : LOF is fitted successfully with 319776 scores\n",
+            "2021-08-04 14:35:28-04:00 : Fitting iForest\n",
+            "2021-08-04 14:35:42-04:00 : iForest is fitted successfully with 319776 scores\n",
+            "2021-08-04 14:35:42-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
+            "2021-08-04 14:35:42-04:00 : Percentage of suspicious transactions: 0.015154358050635445\n",
+            "2021-08-04 14:35:42-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1659,7 +1659,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 914
         },
-        "outputId": "989ab351-c590-401a-8603-e296e2ef1fb7"
+        "outputId": "8ff4aa83-918b-4e0f-967a-6364f98556a5"
       },
       "source": [
         "AS_103_score_df = ensemble_fun (AS_103_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
@@ -1670,14 +1670,14 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-08-04 13:35:22-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
-            "2021-08-04 13:35:30-04:00 : Fitting LOF\n",
-            "2021-08-04 13:35:30-04:00 : LOF is fitted successfully with 629564 scores\n",
-            "2021-08-04 13:36:25-04:00 : Fitting iForest\n",
-            "2021-08-04 13:36:56-04:00 : iForest is fitted successfully with 629564 scores\n",
-            "2021-08-04 13:36:57-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
-            "2021-08-04 13:36:57-04:00 : Percentage of suspicious transactions: 0.016441537317889842\n",
-            "2021-08-04 13:36:57-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
+            "2021-08-04 14:35:42-04:00 : Input data frame size: Rows = 629564, Columns = 2\n",
+            "2021-08-04 14:35:49-04:00 : Fitting LOF\n",
+            "2021-08-04 14:35:49-04:00 : LOF is fitted successfully with 629564 scores\n",
+            "2021-08-04 14:36:46-04:00 : Fitting iForest\n",
+            "2021-08-04 14:37:17-04:00 : iForest is fitted successfully with 629564 scores\n",
+            "2021-08-04 14:37:17-04:00 : Minimum Score = -2368640171253828.5, Maximum Score = -0.32455291113034557\n",
+            "2021-08-04 14:37:17-04:00 : Percentage of suspicious transactions: 0.016441537317889842\n",
+            "2021-08-04 14:37:17-04:00 : Output data frame size: Rows = 629564, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -1920,7 +1920,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 880
         },
-        "outputId": "e5047da2-3daf-44aa-efdd-591e0aac7bae"
+        "outputId": "4b8ee85f-2ad5-4e89-a50e-bcf256cb7a4b"
       },
       "source": [
         "AS_202_score_df = ensemble_fun (AS_202_df, n_neighbors_n=20, leaf_size=30, pairwise_n=2, n_estimators_n=100, random_state_n=42, contamination_n=0.01)\n",
@@ -1931,14 +1931,14 @@
         {
           "output_type": "stream",
           "text": [
-            "2021-08-04 13:36:57-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
-            "2021-08-04 13:36:59-04:00 : Fitting LOF\n",
-            "2021-08-04 13:36:59-04:00 : LOF is fitted successfully with 319776 scores\n",
-            "2021-08-04 13:37:24-04:00 : Fitting iForest\n",
-            "2021-08-04 13:37:39-04:00 : iForest is fitted successfully with 319776 scores\n",
-            "2021-08-04 13:37:39-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
-            "2021-08-04 13:37:39-04:00 : Percentage of suspicious transactions: 0.015154358050635445\n",
-            "2021-08-04 13:37:39-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
+            "2021-08-04 14:37:17-04:00 : Input data frame size: Rows = 319776, Columns = 2\n",
+            "2021-08-04 14:37:20-04:00 : Fitting LOF\n",
+            "2021-08-04 14:37:20-04:00 : LOF is fitted successfully with 319776 scores\n",
+            "2021-08-04 14:37:46-04:00 : Fitting iForest\n",
+            "2021-08-04 14:38:00-04:00 : iForest is fitted successfully with 319776 scores\n",
+            "2021-08-04 14:38:00-04:00 : Minimum Score = -77893830378322.72, Maximum Score = -0.30760777722965976\n",
+            "2021-08-04 14:38:00-04:00 : Percentage of suspicious transactions: 0.015154358050635445\n",
+            "2021-08-04 14:38:00-04:00 : Output data frame size: Rows = 319776, Columns = 12\n"
           ],
           "name": "stdout"
         },
@@ -2174,14 +2174,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EuTWuYNpZxRa"
+      },
+      "source": [
+        "## **Backup Data Frames for Supervised Machine Learning**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Qp2e2KdtYtAX"
+        "id": "koXciS14Z6GX"
+      },
+      "source": [
+        "NN_103_score_df.to_csv('/content/gdrive/MyDrive/NN_103_score_df.cvs',index=False)\n",
+        "NN_202_score_df.to_csv('/content/gdrive/MyDrive/NN_202_score_df.cvs',index=False)\n",
+        "EU_103_score_df.to_csv('/content/gdrive/MyDrive/EU_103_score_df.cvs',index=False)\n",
+        "EU_202_score_df.to_csv('/content/gdrive/MyDrive/EU_202_score_df.cvs',index=False)\n",
+        "AS_103_score_df.to_csv('/content/gdrive/MyDrive/AS_103_score_df.cvs',index=False)\n",
+        "AS_202_score_df.to_csv('/content/gdrive/MyDrive/AS_202_score_df.cvs',index=False)"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LYOk9IBy3dKc"
       },
       "source": [
         ""
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
