--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPEj/7LqG2YMNqB7ajwZk1P",
+      "authorship_tag": "ABX9TyNKZr3ceTia2ZgFBcD0eMDk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,7 +540,7 @@
         "  # Include only the relavent independent varialbes\n",
         "  X=df[['TRXN_MONTH','TRANSACTION_AMOUNT']]\n",
         "  \n",
-        "  # Scaled and center the data around the mean of 0\n",
+        "  # Scale and center the data around the mean of 0\n",
         "  from sklearn.preprocessing import StandardScaler\n",
         "  scaling=StandardScaler()\n",
         "  scaling.fit_transform(X)\n",
