--- a/DSC_680_Unsupervised_Learning.ipynb
+++ b/DSC_680_Unsupervised_Learning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNKZr3ceTia2ZgFBcD0eMDk",
+      "authorship_tag": "ABX9TyO62cjCOROjrhTfVDloERcN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -554,7 +554,7 @@
         "  # Initialize an enumerate list of estimators\n",
         "  estimator_list = {\n",
         "    # novelty=False because this is outlier detection.\n",
-        "    # pairwise_n = 2 for Euclidian distance and 1 for Manhattan distance.\n",
+        "    # pairwise_n = 2 for Euclidian distance and pairwise_n = 1 for Manhattan distance.\n",
         "    'LOF':LocalOutlierFactor(novelty=False, n_neighbors=n_neighbors_n, algorithm='auto', leaf_size=30, \n",
         "                             metric='minkowski', p=pairwise_n, metric_params=None, contamination=contamination_n),\n",
         "    'iForest':IsolationForest(n_estimators=n_estimators_n, random_state=random_state_n, max_samples=len(X), contamination=contamination_n)\n",
